# oxc

./: Cargo.toml  dprint.json  estree_field_orders.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release_napi_minify.yml  release_napi_parser.yml  release_napi_transform.yml  reusable_release_napi.yml
crates/oxc_allocator/src/vec2/: mod.rs
crates/oxc_ast/src/ast/: ts.rs
crates/oxc_ast/src/ast_impl/: ts.rs
crates/oxc_codegen/src/: gen.rs
crates/oxc_formatter/src/formatter/: builders.rs  context.rs  mod.rs  separated.rs  state.rs
crates/oxc_formatter/src/write/: arrow_function_expression.rs  class.rs  directive.rs  mod.rs  parameter_list.rs  variable_declaration.rs
crates/oxc_isolated_declarations/src/: declaration.rs  lib.rs
crates/oxc_language_server/src/: main.rs  worker.rs
crates/oxc_parser/src/ts/: statement.rs
crates/oxc_semantic/src/: binder.rs
crates/oxc_transformer/src/typescript/: namespace.rs
editors/vscode/: .oxlintrc.json
napi/parser/: Cargo.toml  deserialize-js.js  deserialize-ts.js  example.mjs
napi/playground/: Cargo.toml  bindings.js  browser.js  index.d.ts  package.json  playground.wasi-browser.js  playground.wasi.cjs
napi/playground/src/: lib.rs  options.rs
npm/oxc-types/: types.d.ts
tasks/ast_tools/src/derives/: estree.rs
tasks/coverage/snapshots/: estree_typescript.snap  parser_typescript.snap  semantic_babel.snap  semantic_typescript.snap
tasks/prettier_conformance/snapshots/: prettier.js.snap.md  prettier.ts.snap.md
tasks/prettier_conformance/src/: ignore_list.rs  lib.rs
(+2 files in other folders)
