[package]
name = "playground"
version = "0.0.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[dependencies]
oxc = { workspace = true, features = ["ast_visit", "codegen", "minifier", "semantic", "serialize", "transformer", "isolated_declarations"] }
oxc_napi = { workspace = true }

oxc_index = { workspace = true }
oxc_linter = { workspace = true }
oxc_prettier = { workspace = true }

napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
